<?xml version="1.0"?>
<package>
  <name>rqt_smach</name>
  <version>0.0.0</version>
  <description>rqt_smach provides a GUI plygin for visualizing SMACH plans.</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rqt_smach</url>
  <author email="jbo@jhu.edu">Jonathan Bohren</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_dotgraph</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
