<package format="3">
  <name>smach_viewer</name>
  <version>4.1.0</version>
  <description>
    The smach viewer is a GUI that shows the state of hierarchical
    SMACH state machines. It can visualize the possible transitions
    between states, as well as the currently active state and the
    values of user data that is passed around between states. The
    smach viewer uses the SMACH debugging interface based on
    the <a href="http://www.ros.org/wiki/smach_msgs">smach
    messages</a> to gather information from running state machines.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/smach_viewer</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="jbo@jhu.edu">Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_msgs</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">wxpython</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-xdot</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-xdot</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-wxgtk4.0</exec_depend>
  <exec_depend>graphviz</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-gi</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-gi</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-qt5-bindings</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-qt5-bindings</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-gi-cairo</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-gi-cairo</exec_depend>
  <exec_depend>gtk3</exec_depend>

  <export>

  </export>
</package>
